# tapl

./: .gitignore  ExtendedSimplyTypedLambdaCalc.hs  SimplyTypedLambdaCalc.hs  SimplyTypedLambdaCalcExtensions.hs  TypedExpr.hs  UntypedExpr.hs  UntypedLambdaCalc.hs  UntypedLambdaCalc2.hs  UntypedLambdaCalcDeBruijn.hs  Utils.hs  build  dev  repl  stack.yaml  tapl.cabal  test.hs
.old/: UntypedExpr.hs  UntypedLambdaCalc.hs
.old/untyped-lambda-calc/: Parser.hs  Pretty.hs  Subst.hs  Term.hs  Token.hs  package.yaml  untyped-lambda-calc.cabal
.old2/stlc/: package.yaml
.old2/stlc/src/: Eval.hs  Type.hs
.old2/untyped/src/: GenLexer.x  GenLexerLib.hs  GenParser.y  Lexer.hs  Parser.hs
Stlc/: Alex.x  Eval.hs  Happy.y  Label.hs  Lexer.hs  Parser.hs  Parser.hs-boot  Pretty.hs  Term.hs  Token.hs  Type.hs  TypeCheck.hs
src/: SimplyTypedLambdaCalc.hs  UntypedLambdaCalc.hs
src/Stlc/: Alex.x  Eval.hs  Happy.y  Lexer.hs  Parser.hs  Pretty.hs  Term.hs  Token.hs  Type.hs  TypeCheck.hs
stlc/: stlc.cabal
stlc/src/: Check.hs  GenLexer.x  GenLexerLib.hs  GenParser.y  GenParserLib.hs  Parser.hs  Term.hs  Term1.hs  Token.hs
untyped/: package.yaml  stack.yaml  untyped-lambda-calc.cabal
untyped-lambda-calc/: Eval.hs  Lexer.hs
untyped/src/: Eval.hs  GenParserLib.hs  Term.hs  Token.hs
