cabal-version: 2.2
name: tapl
version: 0

library
  build-depends:
      base ^>= 4.11
    , bound ^>= 2.0
    , containers ^>= 0.5
    , Earley ^>= 0.12
    , lexer-applicative ^>= 2.1.0.2
    , megaparsec ^>= 6.5.0
    , mtl ^>= 2.2
    , parsec ^>= 3.1
    , regex-applicative ^>= 0.3
    , srcloc ^>= 0.5
    , transformers-compat ^>= 0.6
  default-extensions:
    DeriveFunctor, DeriveGeneric, DeriveTraversable, LambdaCase,
    OverloadedStrings, PatternSynonyms, RecursiveDo, ScopedTypeVariables,
    ViewPatterns
  default-language:
    Haskell2010
  exposed-modules:
      UntypedExpr
    , UntypedLambdaCalc
    , UntypedLambdaCalcDeBruijn
    , TypedExpr
    , SimplyTypedLambdaCalc
    , SimplyTypedLambdaCalcExtensions
  ghc-options:
    -fprint-expanded-synonyms -fprint-explicit-foralls -fprint-explicit-kinds
    -fprint-unicode-syntax -freverse-errors -Wall -Wcompat -Widentities
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-local-signatures -Wnoncanonical-monad-instances
    -Wnoncanonical-monadfail-instances -Wpartial-fields -Wredundant-constraints
