cabal-version: 2.2
name: tapl
version: 0

library
  build-depends:
      array
    , base ^>= 4.11
    , bound ^>= 2.0
    , bytestring
    , containers ^>= 0.5
    , Earley ^>= 0.12
    , lexer-applicative ^>= 2.1.0.2
    , megaparsec ^>= 6.5.0
    , mtl ^>= 2.2
    , parsec ^>= 3.1
    , prettyprinter ^>= 1.2
    , regex-applicative ^>= 0.3
    , srcloc ^>= 0.5
    , text
    , transformers
    , transformers-compat ^>= 0.6
  build-tools:
      alex
    , happy
  default-extensions:
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PatternSynonyms
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeSynonymInstances
    ViewPatterns
  default-language:
    Haskell2010
  exposed-modules:
      UntypedExpr
    , UntypedLambdaCalc
    , UntypedLambdaCalcDeBruijn
    , TypedExpr
    , SimplyTypedLambdaCalc
    , Stlc.Alex
    , Stlc.Eval
    , Stlc.Happy
    , Stlc.Label
    , Stlc.Lexer
    , Stlc.Parser
    , Stlc.Pretty
    , Stlc.Term
    , Stlc.Token
    , Stlc.Type
    , Stlc.TypeCheck
  ghc-options:
    -fprint-expanded-synonyms -fprint-explicit-foralls -fprint-explicit-kinds
    -fprint-unicode-syntax -freverse-errors -Wall -Wcompat -Widentities
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monadfail-instances -Wpartial-fields -Wredundant-constraints
  hs-source-dirs:
    src
